SPCTR-1728 Post Carousel - Fixed dots overlapping on other blocks below

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -365,6 +365,10 @@
 	.is-carousel {
 		padding: 0;
 	}
+
+	ul.slick-dots {
+		transform: unset;
+	}
 }
 
 .uagb-post-grid[data-equal-height="yes"] .uagb-post__inner-wrap {
